parser.output
Nonterminals useless in grammar

    prototypest


Terminals unused in grammar

    ELSEIF
    IMPORT
    EXTERN


Rules useless in grammar

   95 prototypest: EXTERN return_types functionnamest BRACE args END_BRACE


State 28 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 50 conflicts: 1 shift/reduce
State 185 conflicts: 1 shift/reduce
State 206 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program functionst
    2        | functionst

    3 functionnamest: TOKEN

    4 functionst: FUNCTION return_types functionnamest BRACE args END_BRACE codes ENDFUNCTION

    5 return_types: return_types typest
    6             | typest

    7 typest: INT
    8       | STRING
    9       | VOID

   10 initialize_intval_st: initialize_intval_st COMMA INT_RETERAL
   11                     | INT_RETERAL

   12 initialize_strval_st: initialize_strval_st COMMA STR_RETERAL
   13                     | STR_RETERAL

   14 var: typest TOKEN
   15    | typest TOKEN EQUAL INT_RETERAL
   16    | INT TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   17    | STRING TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   18    | INT TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_intval_st RIGHT_INDEX_BRACKET
   19    | STRING TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_strval_st RIGHT_INDEX_BRACKET
   20    | typest TOKEN EQUAL STR_RETERAL
   21    | VOID

   22 args: args COMMA typest TOKEN
   23     | typest TOKEN

   24 codes: var CR
   25      | callst CR
   26      | array_reteral EQUAL callst CR
   27      | ifst
   28      | forst
   29      | dowhilest
   30      | BREAK CR
   31      | CONTINUE CR
   32      | retrnst CR
   33      | expr CR
   34      | codes var CR
   35      | codes callst CR
   36      | codes array_reteral EQUAL callst CR
   37      | codes ifst
   38      | codes forst
   39      | codes dowhilest
   40      | codes BREAK CR
   41      | codes CONTINUE CR
   42      | codes retrnst CR
   43      | codes expr CR

   44 accessable_var: TOKEN
   45               | TOKEN LEFT_INDEX_BRACKET expr RIGHT_INDEX_BRACKET

   46 return_vars: return_vars COMMA accessable_var
   47            | accessable_var

   48 array_reteral: LEFT_INDEX_BRACKET return_vars RIGHT_INDEX_BRACKET

   49 expr: INT_RETERAL
   50     | STR_RETERAL
   51     | MINUS_INT_RETERAL
   52     | BRACE expr END_BRACE
   53     | expr PLUS expr
   54     | expr MINUS expr
   55     | expr ASTA expr
   56     | expr SLASH expr
   57     | expr MOD expr
   58     | expr EQUAL expr
   59     | expr EQUAL_EQUAL expr
   60     | expr NOT_EQUAL expr
   61     | expr LOGICAL_NOT
   62     | expr LOGICAL_AND expr
   63     | expr LOGICAL_OR expr
   64     | expr GRATER_THAN_LEFT expr
   65     | expr GRATER_THAN_RIGHT expr
   66     | expr EQUAL_GRATER_THAN_LEFT expr
   67     | expr EQUAL_GRATER_THAN_RIGHT expr
   68     | BIT_NOT expr
   69     | expr LEFT_SHIFT expr
   70     | expr RIGHT_SHIFT expr
   71     | expr LEFT_SHIFT_LOGIC expr
   72     | expr RIGHT_SHIFT_LOGIC expr
   73     | expr BIT_AND expr
   74     | expr BIT_OR expr
   75     | expr BIT_XOR expr
   76     | TOKEN
   77     | TOKEN LEFT_INDEX_BRACKET expr RIGHT_INDEX_BRACKET

   78 callst: TOKEN BRACE manytokenst END_BRACE
   79       | RESERVED_WORD BRACE manytokenst END_BRACE

   80 manytokenst: manytokenst COMMA expr
   81            | expr

   82 else_if_list: else_if_list else_if_list
   83             | ELSE IF expr THEN codes

   84 ifst: IF expr THEN codes ENDIF
   85     | IF expr THEN codes ELSE codes ENDIF
   86     | IF expr THEN codes else_if_list ENDIF
   87     | IF expr THEN codes else_if_list ELSE codes ENDIF

   88 forst: FOR TOKEN EQUAL expr TO expr codes NEXT
   89      | FOR TOKEN EQUAL expr TO expr STEP expr codes NEXT

   90 dowhilest: DO WHILE expr codes LOOP
   91          | WHILE expr codes ENDWHILE

   92 retrnst: RETRN expr
   93        | RETRN LEFT_INDEX_BRACKET manytokenst RIGHT_INDEX_BRACKET
   94        | RETRN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IF <ctype> (258) 83 84 85 86 87
    ELSE <ctype> (259) 83 85 87
    ELSEIF <ctype> (260)
    THEN <ctype> (261) 83 84 85 86 87
    ENDIF <ctype> (262) 84 85 86 87
    FOR <ctype> (263) 88 89
    TO <ctype> (264) 88 89
    STEP <ctype> (265) 89
    NEXT <ctype> (266) 88 89
    WHILE <ctype> (267) 90 91
    DO <ctype> (268) 90
    LOOP <ctype> (269) 90
    ENDWHILE <ctype> (270) 91
    FUNCTION <ctype> (271) 4
    ENDFUNCTION <ctype> (272) 4
    BREAK <ctype> (273) 30 40
    CONTINUE <ctype> (274) 31 41
    RETRN <ctype> (275) 92 93 94
    INT <ctype> (276) 7 16 18
    STRING <ctype> (277) 8 17 19
    VOID <ctype> (278) 9 21
    STR_RETERAL <ctype> (279) 12 13 20 50
    INT_RETERAL <ctype> (280) 10 11 15 16 17 18 19 49
    MINUS_INT_RETERAL <ctype> (281) 51
    EQUAL <ctype> (282) 15 18 19 20 26 36 58 88 89
    BIT_NOT <ctype> (283) 68
    PLUS <ctype> (284) 53
    MINUS <ctype> (285) 54
    ASTA <ctype> (286) 55
    SLASH <ctype> (287) 56
    MOD <ctype> (288) 57
    LEFT_SHIFT <ctype> (289) 69
    RIGHT_SHIFT <ctype> (290) 70
    LEFT_SHIFT_LOGIC <ctype> (291) 71
    RIGHT_SHIFT_LOGIC <ctype> (292) 72
    COMMA <ctype> (293) 10 12 22 46 80
    BIT_AND <ctype> (294) 73
    BIT_XOR <ctype> (295) 75
    BIT_OR <ctype> (296) 74
    GRATER_THAN_LEFT <ctype> (297) 64
    GRATER_THAN_RIGHT <ctype> (298) 65
    EQUAL_GRATER_THAN_LEFT <ctype> (299) 66
    EQUAL_GRATER_THAN_RIGHT <ctype> (300) 67
    EQUAL_EQUAL <ctype> (301) 59
    LOGICAL_NOT <ctype> (302) 61
    NOT_EQUAL <ctype> (303) 60
    LOGICAL_AND <ctype> (304) 62
    LOGICAL_OR <ctype> (305) 63
    TOKEN <ctype> (306) 3 14 15 16 17 18 19 20 22 23 44 45 76 77 78 88 89
    RESERVED_WORD <ctype> (307) 79
    CR <ctype> (308) 24 25 26 30 31 32 33 34 35 36 40 41 42 43
    BRACE <ctype> (309) 4 52 78 79
    END_BRACE <ctype> (310) 4 52 78 79
    IMPORT <ctype> (311)
    LEFT_INDEX_BRACKET <ctype> (312) 16 17 18 19 45 48 77 93
    RIGHT_INDEX_BRACKET <ctype> (313) 16 17 18 19 45 48 77 93
    EXTERN <ctype> (314)


Nonterminals, with rules where they appear

    $accept (60)
        on left: 0
    program <ctype> (61)
        on left: 1 2
        on right: 0 1
    functionnamest <ctype> (62)
        on left: 3
        on right: 4
    functionst <ctype> (63)
        on left: 4
        on right: 1 2
    return_types <ctype> (64)
        on left: 5 6
        on right: 4 5
    typest <ctype> (65)
        on left: 7 8 9
        on right: 5 6 14 15 20 22 23
    initialize_intval_st <ctype> (66)
        on left: 10 11
        on right: 10 18
    initialize_strval_st <ctype> (67)
        on left: 12 13
        on right: 12 19
    var <ctype> (68)
        on left: 14 15 16 17 18 19 20 21
        on right: 24 34
    args <ctype> (69)
        on left: 22 23
        on right: 4 22
    codes <ctype> (70)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
        on right: 4 34 35 36 37 38 39 40 41 42 43 83 84 85 86 87 88 89 90 91
    accessable_var <ctype> (71)
        on left: 44 45
        on right: 46 47
    return_vars <ctype> (72)
        on left: 46 47
        on right: 46 48
    array_reteral <ctype> (73)
        on left: 48
        on right: 26 36
    expr <ctype> (74)
        on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
        on right: 33 43 45 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 77 80 81 83 84 85 86 87 88 89 90 91 92
    callst <ctype> (75)
        on left: 78 79
        on right: 25 26 35 36
    manytokenst <ctype> (76)
        on left: 80 81
        on right: 78 79 80 93
    else_if_list <ctype> (77)
        on left: 82 83
        on right: 82 86 87
    ifst <ctype> (78)
        on left: 84 85 86 87
        on right: 27 37
    forst <ctype> (79)
        on left: 88 89
        on right: 28 38
    dowhilest <ctype> (80)
        on left: 90 91
        on right: 29 39
    retrnst <ctype> (81)
        on left: 92 93 94
        on right: 32 42


State 0

    0 $accept: . program $end

    FUNCTION  shift, and go to state 1

    program     go to state 2
    functionst  go to state 3


State 1

    4 functionst: FUNCTION . return_types functionnamest BRACE args END_BRACE codes ENDFUNCTION

    INT     shift, and go to state 4
    STRING  shift, and go to state 5
    VOID    shift, and go to state 6

    return_types  go to state 7
    typest        go to state 8


State 2

    0 $accept: program . $end
    1 program: program . functionst

    $end      shift, and go to state 9
    FUNCTION  shift, and go to state 1

    functionst  go to state 10


State 3

    2 program: functionst .

    $default  reduce using rule 2 (program)


State 4

    7 typest: INT .

    $default  reduce using rule 7 (typest)


State 5

    8 typest: STRING .

    $default  reduce using rule 8 (typest)


State 6

    9 typest: VOID .

    $default  reduce using rule 9 (typest)


State 7

    4 functionst: FUNCTION return_types . functionnamest BRACE args END_BRACE codes ENDFUNCTION
    5 return_types: return_types . typest

    INT     shift, and go to state 4
    STRING  shift, and go to state 5
    VOID    shift, and go to state 6
    TOKEN   shift, and go to state 11

    functionnamest  go to state 12
    typest          go to state 13


State 8

    6 return_types: typest .

    $default  reduce using rule 6 (return_types)


State 9

    0 $accept: program $end .

    $default  accept


State 10

    1 program: program functionst .

    $default  reduce using rule 1 (program)


State 11

    3 functionnamest: TOKEN .

    $default  reduce using rule 3 (functionnamest)


State 12

    4 functionst: FUNCTION return_types functionnamest . BRACE args END_BRACE codes ENDFUNCTION

    BRACE  shift, and go to state 14


State 13

    5 return_types: return_types typest .

    $default  reduce using rule 5 (return_types)


State 14

    4 functionst: FUNCTION return_types functionnamest BRACE . args END_BRACE codes ENDFUNCTION

    INT     shift, and go to state 4
    STRING  shift, and go to state 5
    VOID    shift, and go to state 6

    typest  go to state 15
    args    go to state 16


State 15

   23 args: typest . TOKEN

    TOKEN  shift, and go to state 17


State 16

    4 functionst: FUNCTION return_types functionnamest BRACE args . END_BRACE codes ENDFUNCTION
   22 args: args . COMMA typest TOKEN

    COMMA      shift, and go to state 18
    END_BRACE  shift, and go to state 19


State 17

   23 args: typest TOKEN .

    $default  reduce using rule 23 (args)


State 18

   22 args: args COMMA . typest TOKEN

    INT     shift, and go to state 4
    STRING  shift, and go to state 5
    VOID    shift, and go to state 6

    typest  go to state 20


State 19

    4 functionst: FUNCTION return_types functionnamest BRACE args END_BRACE . codes ENDFUNCTION

    IF                  shift, and go to state 21
    FOR                 shift, and go to state 22
    WHILE               shift, and go to state 23
    DO                  shift, and go to state 24
    BREAK               shift, and go to state 25
    CONTINUE            shift, and go to state 26
    RETRN               shift, and go to state 27
    INT                 shift, and go to state 28
    STRING              shift, and go to state 29
    VOID                shift, and go to state 30
    STR_RETERAL         shift, and go to state 31
    INT_RETERAL         shift, and go to state 32
    MINUS_INT_RETERAL   shift, and go to state 33
    BIT_NOT             shift, and go to state 34
    TOKEN               shift, and go to state 35
    RESERVED_WORD       shift, and go to state 36
    BRACE               shift, and go to state 37
    LEFT_INDEX_BRACKET  shift, and go to state 38

    typest         go to state 39
    var            go to state 40
    codes          go to state 41
    array_reteral  go to state 42
    expr           go to state 43
    callst         go to state 44
    ifst           go to state 45
    forst          go to state 46
    dowhilest      go to state 47
    retrnst        go to state 48


State 20

   22 args: args COMMA typest . TOKEN

    TOKEN  shift, and go to state 49


State 21

   84 ifst: IF . expr THEN codes ENDIF
   85     | IF . expr THEN codes ELSE codes ENDIF
   86     | IF . expr THEN codes else_if_list ENDIF
   87     | IF . expr THEN codes else_if_list ELSE codes ENDIF

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr  go to state 51


State 22

   88 forst: FOR . TOKEN EQUAL expr TO expr codes NEXT
   89      | FOR . TOKEN EQUAL expr TO expr STEP expr codes NEXT

    TOKEN  shift, and go to state 52


State 23

   91 dowhilest: WHILE . expr codes ENDWHILE

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr  go to state 53


State 24

   90 dowhilest: DO . WHILE expr codes LOOP

    WHILE  shift, and go to state 54


State 25

   30 codes: BREAK . CR

    CR  shift, and go to state 55


State 26

   31 codes: CONTINUE . CR

    CR  shift, and go to state 56


State 27

   92 retrnst: RETRN . expr
   93        | RETRN . LEFT_INDEX_BRACKET manytokenst RIGHT_INDEX_BRACKET
   94        | RETRN .

    STR_RETERAL         shift, and go to state 31
    INT_RETERAL         shift, and go to state 32
    MINUS_INT_RETERAL   shift, and go to state 33
    BIT_NOT             shift, and go to state 34
    TOKEN               shift, and go to state 50
    BRACE               shift, and go to state 37
    LEFT_INDEX_BRACKET  shift, and go to state 57

    $default  reduce using rule 94 (retrnst)

    expr  go to state 58


State 28

    7 typest: INT .
   16 var: INT . TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   18    | INT . TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_intval_st RIGHT_INDEX_BRACKET

    TOKEN  shift, and go to state 59

    TOKEN  [reduce using rule 7 (typest)]


State 29

    8 typest: STRING .
   17 var: STRING . TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   19    | STRING . TOKEN LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_strval_st RIGHT_INDEX_BRACKET

    TOKEN  shift, and go to state 60

    TOKEN  [reduce using rule 8 (typest)]


State 30

    9 typest: VOID .
   21 var: VOID .

    CR        reduce using rule 21 (var)
    $default  reduce using rule 9 (typest)


State 31

   50 expr: STR_RETERAL .

    $default  reduce using rule 50 (expr)


State 32

   49 expr: INT_RETERAL .

    $default  reduce using rule 49 (expr)


State 33

   51 expr: MINUS_INT_RETERAL .

    $default  reduce using rule 51 (expr)


State 34

   68 expr: BIT_NOT . expr

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr  go to state 61


State 35

   76 expr: TOKEN .
   77     | TOKEN . LEFT_INDEX_BRACKET expr RIGHT_INDEX_BRACKET
   78 callst: TOKEN . BRACE manytokenst END_BRACE

    BRACE               shift, and go to state 62
    LEFT_INDEX_BRACKET  shift, and go to state 63

    $default  reduce using rule 76 (expr)


State 36

   79 callst: RESERVED_WORD . BRACE manytokenst END_BRACE

    BRACE  shift, and go to state 64


State 37

   52 expr: BRACE . expr END_BRACE

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr  go to state 65


State 38

   48 array_reteral: LEFT_INDEX_BRACKET . return_vars RIGHT_INDEX_BRACKET

    TOKEN  shift, and go to state 66

    accessable_var  go to state 67
    return_vars     go to state 68


State 39

   14 var: typest . TOKEN
   15    | typest . TOKEN EQUAL INT_RETERAL
   20    | typest . TOKEN EQUAL STR_RETERAL

    TOKEN  shift, and go to state 69


State 40

   24 codes: var . CR

    CR  shift, and go to state 70


State 41

    4 functionst: FUNCTION return_types functionnamest BRACE args END_BRACE codes . ENDFUNCTION
   34 codes: codes . var CR
   35      | codes . callst CR
   36      | codes . array_reteral EQUAL callst CR
   37      | codes . ifst
   38      | codes . forst
   39      | codes . dowhilest
   40      | codes . BREAK CR
   41      | codes . CONTINUE CR
   42      | codes . retrnst CR
   43      | codes . expr CR

    IF                  shift, and go to state 21
    FOR                 shift, and go to state 22
    WHILE               shift, and go to state 23
    DO                  shift, and go to state 24
    ENDFUNCTION         shift, and go to state 71
    BREAK               shift, and go to state 72
    CONTINUE            shift, and go to state 73
    RETRN               shift, and go to state 27
    INT                 shift, and go to state 28
    STRING              shift, and go to state 29
    VOID                shift, and go to state 30
    STR_RETERAL         shift, and go to state 31
    INT_RETERAL         shift, and go to state 32
    MINUS_INT_RETERAL   shift, and go to state 33
    BIT_NOT             shift, and go to state 34
    TOKEN               shift, and go to state 35
    RESERVED_WORD       shift, and go to state 36
    BRACE               shift, and go to state 37
    LEFT_INDEX_BRACKET  shift, and go to state 38

    typest         go to state 39
    var            go to state 74
    array_reteral  go to state 75
    expr           go to state 76
    callst         go to state 77
    ifst           go to state 78
    forst          go to state 79
    dowhilest      go to state 80
    retrnst        go to state 81


State 42

   26 codes: array_reteral . EQUAL callst CR

    EQUAL  shift, and go to state 82


State 43

   33 codes: expr . CR
   53 expr: expr . PLUS expr
   54     | expr . MINUS expr
   55     | expr . ASTA expr
   56     | expr . SLASH expr
   57     | expr . MOD expr
   58     | expr . EQUAL expr
   59     | expr . EQUAL_EQUAL expr
   60     | expr . NOT_EQUAL expr
   61     | expr . LOGICAL_NOT
   62     | expr . LOGICAL_AND expr
   63     | expr . LOGICAL_OR expr
   64     | expr . GRATER_THAN_LEFT expr
   65     | expr . GRATER_THAN_RIGHT expr
   66     | expr . EQUAL_GRATER_THAN_LEFT expr
   67     | expr . EQUAL_GRATER_THAN_RIGHT expr
   69     | expr . LEFT_SHIFT expr
   70     | expr . RIGHT_SHIFT expr
   71     | expr . LEFT_SHIFT_LOGIC expr
   72     | expr . RIGHT_SHIFT_LOGIC expr
   73     | expr . BIT_AND expr
   74     | expr . BIT_OR expr
   75     | expr . BIT_XOR expr

    EQUAL                    shift, and go to state 83
    PLUS                     shift, and go to state 84
    MINUS                    shift, and go to state 85
    ASTA                     shift, and go to state 86
    SLASH                    shift, and go to state 87
    MOD                      shift, and go to state 88
    LEFT_SHIFT               shift, and go to state 89
    RIGHT_SHIFT              shift, and go to state 90
    LEFT_SHIFT_LOGIC         shift, and go to state 91
    RIGHT_SHIFT_LOGIC        shift, and go to state 92
    BIT_AND                  shift, and go to state 93
    BIT_XOR                  shift, and go to state 94
    BIT_OR                   shift, and go to state 95
    GRATER_THAN_LEFT         shift, and go to state 96
    GRATER_THAN_RIGHT        shift, and go to state 97
    EQUAL_GRATER_THAN_LEFT   shift, and go to state 98
    EQUAL_GRATER_THAN_RIGHT  shift, and go to state 99
    EQUAL_EQUAL              shift, and go to state 100
    LOGICAL_NOT              shift, and go to state 101
    NOT_EQUAL                shift, and go to state 102
    LOGICAL_AND              shift, and go to state 103
    LOGICAL_OR               shift, and go to state 104
    CR                       shift, and go to state 105


State 44

   25 codes: callst . CR

    CR  shift, and go to state 106


State 45

   27 codes: ifst .

    $default  reduce using rule 27 (codes)


State 46

   28 codes: forst .

    $default  reduce using rule 28 (codes)


State 47

   29 codes: dowhilest .

    $default  reduce using rule 29 (codes)


State 48

   32 codes: retrnst . CR

    CR  shift, and go to state 107


State 49

   22 args: args COMMA typest TOKEN .

    $default  reduce using rule 22 (args)


State 50

   76 expr: TOKEN .
   77     | TOKEN . LEFT_INDEX_BRACKET expr RIGHT_INDEX_BRACKET

    LEFT_INDEX_BRACKET  shift, and go to state 63

    LEFT_INDEX_BRACKET  [reduce using rule 76 (expr)]
    $default            reduce using rule 76 (expr)


State 51

   53 expr: expr . PLUS expr
   54     | expr . MINUS expr
   55     | expr . ASTA expr
   56     | expr . SLASH expr
   57     | expr . MOD expr
   58     | expr . EQUAL expr
   59     | expr . EQUAL_EQUAL expr
   60     | expr . NOT_EQUAL expr
   61     | expr . LOGICAL_NOT
   62     | expr . LOGICAL_AND expr
   63     | expr . LOGICAL_OR expr
   64     | expr . GRATER_THAN_LEFT expr
   65     | expr . GRATER_THAN_RIGHT expr
   66     | expr . EQUAL_GRATER_THAN_LEFT expr
   67     | expr . EQUAL_GRATER_THAN_RIGHT expr
   69     | expr . LEFT_SHIFT expr
   70     | expr . RIGHT_SHIFT expr
   71     | expr . LEFT_SHIFT_LOGIC expr
   72     | expr . RIGHT_SHIFT_LOGIC expr
   73     | expr . BIT_AND expr
   74     | expr . BIT_OR expr
   75     | expr . BIT_XOR expr
   84 ifst: IF expr . THEN codes ENDIF
   85     | IF expr . THEN codes ELSE codes ENDIF
   86     | IF expr . THEN codes else_if_list ENDIF
   87     | IF expr . THEN codes else_if_list ELSE codes ENDIF

    THEN                     shift, and go to state 108
    EQUAL                    shift, and go to state 83
    PLUS                     shift, and go to state 84
    MINUS                    shift, and go to state 85
    ASTA                     shift, and go to state 86
    SLASH                    shift, and go to state 87
    MOD                      shift, and go to state 88
    LEFT_SHIFT               shift, and go to state 89
    RIGHT_SHIFT              shift, and go to state 90
    LEFT_SHIFT_LOGIC         shift, and go to state 91
    RIGHT_SHIFT_LOGIC        shift, and go to state 92
    BIT_AND                  shift, and go to state 93
    BIT_XOR                  shift, and go to state 94
    BIT_OR                   shift, and go to state 95
    GRATER_THAN_LEFT         shift, and go to state 96
    GRATER_THAN_RIGHT        shift, and go to state 97
    EQUAL_GRATER_THAN_LEFT   shift, and go to state 98
    EQUAL_GRATER_THAN_RIGHT  shift, and go to state 99
    EQUAL_EQUAL              shift, and go to state 100
    LOGICAL_NOT              shift, and go to state 101
    NOT_EQUAL                shift, and go to state 102
    LOGICAL_AND              shift, and go to state 103
    LOGICAL_OR               shift, and go to state 104


State 52

   88 forst: FOR TOKEN . EQUAL expr TO expr codes NEXT
   89      | FOR TOKEN . EQUAL expr TO expr STEP expr codes NEXT

    EQUAL  shift, and go to state 109


State 53

   53 expr: expr . PLUS expr
   54     | expr . MINUS expr
   55     | expr . ASTA expr
   56     | expr . SLASH expr
   57     | expr . MOD expr
   58     | expr . EQUAL expr
   59     | expr . EQUAL_EQUAL expr
   60     | expr . NOT_EQUAL expr
   61     | expr . LOGICAL_NOT
   62     | expr . LOGICAL_AND expr
   63     | expr . LOGICAL_OR expr
   64     | expr . GRATER_THAN_LEFT expr
   65     | expr . GRATER_THAN_RIGHT expr
   66     | expr . EQUAL_GRATER_THAN_LEFT expr
   67     | expr . EQUAL_GRATER_THAN_RIGHT expr
   69     | expr . LEFT_SHIFT expr
   70     | expr . RIGHT_SHIFT expr
   71     | expr . LEFT_SHIFT_LOGIC expr
   72     | expr . RIGHT_SHIFT_LOGIC expr
   73     | expr . BIT_AND expr
   74     | expr . BIT_OR expr
   75     | expr . BIT_XOR expr
   91 dowhilest: WHILE expr . codes ENDWHILE

    IF                       shift, and go to state 21
    FOR                      shift, and go to state 22
    WHILE                    shift, and go to state 23
    DO                       shift, and go to state 24
    BREAK                    shift, and go to state 25
    CONTINUE                 shift, and go to state 26
    RETRN                    shift, and go to state 27
    INT                      shift, and go to state 28
    STRING                   shift, and go to state 29
    VOID                     shift, and go to state 30
    STR_RETERAL              shift, and go to state 31
    INT_RETERAL              shift, and go to state 32
    MINUS_INT_RETERAL        shift, and go to state 33
    EQUAL                    shift, and go to state 83
    BIT_NOT                  shift, and go to state 34
    PLUS                     shift, and go to state 84
    MINUS                    shift, and go to state 85
    ASTA                     shift, and go to state 86
    SLASH                    shift, and go to state 87
    MOD                      shift, and go to state 88
    LEFT_SHIFT               shift, and go to state 89
    RIGHT_SHIFT              shift, and go to state 90
    LEFT_SHIFT_LOGIC         shift, and go to state 91
    RIGHT_SHIFT_LOGIC        shift, and go to state 92
    BIT_AND                  shift, and go to state 93
    BIT_XOR                  shift, and go to state 94
    BIT_OR                   shift, and go to state 95
    GRATER_THAN_LEFT         shift, and go to state 96
    GRATER_THAN_RIGHT        shift, and go to state 97
    EQUAL_GRATER_THAN_LEFT   shift, and go to state 98
    EQUAL_GRATER_THAN_RIGHT  shift, and go to state 99
    EQUAL_EQUAL              shift, and go to state 100
    LOGICAL_NOT              shift, and go to state 101
    NOT_EQUAL                shift, and go to state 102
    LOGICAL_AND              shift, and go to state 103
    LOGICAL_OR               shift, and go to state 104
    TOKEN                    shift, and go to state 35
    RESERVED_WORD            shift, and go to state 36
    BRACE                    shift, and go to state 37
    LEFT_INDEX_BRACKET       shift, and go to state 38

    typest         go to state 39
    var            go to state 40
    codes          go to state 110
    array_reteral  go to state 42
    expr           go to state 43
    callst         go to state 44
    ifst           go to state 45
    forst          go to state 46
    dowhilest      go to state 47
    retrnst        go to state 48


State 54

   90 dowhilest: DO WHILE . expr codes LOOP

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr  go to state 111


State 55

   30 codes: BREAK CR .

    $default  reduce using rule 30 (codes)


State 56

   31 codes: CONTINUE CR .

    $default  reduce using rule 31 (codes)


State 57

   93 retrnst: RETRN LEFT_INDEX_BRACKET . manytokenst RIGHT_INDEX_BRACKET

    STR_RETERAL        shift, and go to state 31
    INT_RETERAL        shift, and go to state 32
    MINUS_INT_RETERAL  shift, and go to state 33
    BIT_NOT            shift, and go to state 34
    TOKEN              shift, and go to state 50
    BRACE              shift, and go to state 37

    expr         go to state 112
    manytokenst  go to state 113


State 58

   53 expr: expr . PLUS expr
   54     | expr . MINUS expr
   55     | expr . ASTA expr
   56     | expr . SLASH expr
   57     | expr . MOD expr
   58     | expr . EQUAL expr
   59     | expr . EQUAL_EQUAL expr
   60     | expr . NOT_EQUAL expr
   61     | expr . LOGICAL_NOT
   62     | expr . LOGICAL_AND expr
   63     | expr . LOGICAL_OR expr
   64     | expr . GRATER_THAN_LEFT expr
   65     | expr . GRATER_THAN_RIGHT expr
   66     | expr . EQUAL_GRATER_THAN_LEFT expr
   67     | expr . EQUAL_GRATER_THAN_RIGHT expr
   69     | expr . LEFT_SHIFT expr
   70     | expr . RIGHT_SHIFT expr
   71     | expr . LEFT_SHIFT_LOGIC expr
   72     | expr . RIGHT_SHIFT_LOGIC expr
   73     | expr . BIT_AND expr
   74     | expr . BIT_OR expr
   75     | expr . BIT_XOR expr
   92 retrnst: RETRN expr .

    EQUAL                    shift, and go to state 83
    PLUS                     shift, and go to state 84
    MINUS                    shift, and go to state 85
    ASTA                     shift, and go to state 86
    SLASH                    shift, and go to state 87
    MOD                      shift, and go to state 88
    LEFT_SHIFT               shift, and go to state 89
    RIGHT_SHIFT              shift, and go to state 90
    LEFT_SHIFT_LOGIC         shift, and go to state 91
    RIGHT_SHIFT_LOGIC        shift, and go to state 92
    BIT_AND                  shift, and go to state 93
    BIT_XOR                  shift, and go to state 94
    BIT_OR                   shift, and go to state 95
    GRATER_THAN_LEFT         shift, and go to state 96
    GRATER_THAN_RIGHT        shift, and go to state 97
    EQUAL_GRATER_THAN_LEFT   shift, and go to state 98
    EQUAL_GRATER_THAN_RIGHT  shift, and go to state 99
    EQUAL_EQUAL              shift, and go to state 100
    LOGICAL_NOT              shift, and go to state 101
    NOT_EQUAL                shift, and go to state 102
    LOGICAL_AND              shift, and go to state 103
    LOGICAL_OR               shift, and go to state 104

    $default  reduce using rule 92 (retrnst)


State 59

   16 var: INT TOKEN . LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   18    | INT TOKEN . LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_intval_st RIGHT_INDEX_BRACKET

    LEFT_INDEX_BRACKET  shift, and go to state 114


State 60

   17 var: STRING TOKEN . LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET
   19    | STRING TOKEN . LEFT_INDEX_BRACKET INT_RETERAL RIGHT_INDEX_BRACKET EQUAL LEFT_INDEX_BRACKET initialize_strval_st RIGHT_INDEX_BRACKET

    LEFT_INDEX_BRACKET  shift, and go to state 115


State 61

   53 expr: expr . PLUS expr
   54     | expr . MINUS expr
   55     | expr . ASTA expr
   56     | expr . SLASH expr
   57     | expr . MOD expr
   58     | expr . EQUAL expr
   59     | expr . EQUAL_EQUAL expr
   60     | expr . NOT_EQUAL expr
   61     | expr . LOGICAL_NOT
   62     | expr . LOGICAL_AND expr
   63     | expr . LOGICAL_OR expr
   64     | expr . GRATER_THAN_LEFT expr
   65     | expr . GRATER_THAN_RIGHT expr
   66     | expr . EQUAL_GRATER_THAN_LEFT expr
   67     | expr . EQUAL_GRATER_THAN_RIGHT expr
   68     | BIT_NOT expr .
   69     | expr . LEFT_SHIFT expr
   70     | expr . RIGHT_SHIFT expr
   71     | expr . LEFT_SHIFT_LOGIC expr
   72     | expr . RIGHT_SHIFT_LOGIC expr
   73     | expr . BIT_AND expr
   74     | expr . BIT_OR expr
   75     | expr . BIT_XOR expr
